# bo

./: justfile  pyproject.toml
src/bo/: __init__.py
src/bo/kernels/: rbf.py
src/bo/models/: gp.py
src/bo/surfaces/: dejong.py
tests/: test_dejong.py  test_rbf.py
