[project]
name = "bo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "structlog>=25.5.0",
    "torch>=2.9.1",
]

[project.scripts]
bo = "bo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]
